# nr-rfc-notifications

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  readme.md
docs/: Architecture.drawio  Architecture.md  chefs.md
docs/architecture/: .$Architecture.drawio.bkp  Architecture.md
rjsf-app/: package-lock.json  package.json
rjsf-app/src/: App.js  FormComponents.js  MainContainer.js
rjsf-app/src/form/: rules.json  schema.json
scripts/python/: create_basin_file.py  objstore_provisions.py  requirements.txt
