[tool.poetry]
name = "nr-rfc-notifications"
version = "0.1.0"
description = ""
authors = ["Kevin Netherton <kevin.netherton@gov.bc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
GDAL = "3.4.1.*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
